updated description (README)

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+calibre recipes, mostly Belarusian news portals
+
 charter97.recipe    - Хартия'97 (http://charter97.org/)
 euroradio.recipe    - Еврорадио в Беларуси (http://www.euroradio.fm/)
 habr.reciepe        - Хабрахабр (http://habrahabr.ru/)
